--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,7 @@
 body {
-    background-position: center center;
+    background-image: none;
     background-size: cover;
+    opacity: 0;
+    transition: opacity 1s ease-in;
+    will-change: opacity;
 }
